# ubiquitous-guide

./: Makefile  README.md  manage.py  pyproject.toml
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
ubiquitous_guide/: asgi.py  settings.py  urls.py  wsgi.py
ubiquitous_guide/templates/admin/: base_site.html
