[tool.poetry]
name = "ubiquitous-guide"
version = "0.1.0"
description = "Travel application to create and explore tourist spots around the world."
authors = ["Patrick Fourchalk <patrick4chalk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
